Criando documentação com SpringDoc e spring 2.7.1